--- a/composer.json
+++ b/composer.json
@@ -6,11 +6,12 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "cviebrock/eloquent-sluggable": "^4.1",
+        "davejamesmiller/laravel-breadcrumbs": "^4.2",
         "fideloper/proxy": "~3.3",
-        "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0",
         "illuminate/html": "5.*",
-        "cviebrock/eloquent-sluggable": "^4.1"
+        "laravel/framework": "5.5.*",
+        "laravel/tinker": "~1.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
